...
      },
      {
        onPress: () => {
          navigation.navigate(MORE_STACK_ROUTES.MoreSettingsDownloads);
        },
        subtitle: t('settings.groups.downloads_description'),
        testID: 'more-settings-downloads',
        title: t('nav.tab.downloads'),
      },
      {
        onPress: () => {
          navigation.navigate(MORE_STACK_ROUTES.MoreSettingsNotifications);
        },
...
      },
    ],
    [navigation, popularityAllowed, t, termsSubtitle]
  );

  return (
    <MenuListScreen sections={[{ items, key: 'settings-groups' }]} testID="more-settings-screen" />
  );
}

